# obiai

./: A White Paper on Bias-Aware, Modular, Reasoning-Centric AI Infrastructure.md  BUG_FIXES.md  COMPILATION_GUIDE.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OBINEXUS_ARCHITECTURE.md  OBI_Transcript.txt  ONTOLOGICAL_ENHANCEMENTS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  READY_FOR_USE.md  SETUP_AND_RUN.md  STATUS.md  SYMBOLIC_INTERPRETER_README.md  integration_example.py  probe_symbolic.py  symbolic_interpreter.py
OBIAI_PATENTS/: CANONICAL_INDEX.md  NOVELTY_EVIDENCE_MATRIX.md  README.md  SECTION_10.md  obiai_patent_claims.md  obinexus-gating-strategy.md
TRANSCRIPTS/: CANONICAL_INDEX.md
docs/: artifact-governance.md  document-registry.csv  rename-map.md
libpolycall-v1/: .gitattributes  DISCLAIMER.md  README.md  REFERENCES.md  TREE.md  build_all.sh
libpolycall-v1/bindings/peer-review/: README.md
libpolycall-v1/docs/: Gosilang Actor Model - Message-Passing Gating Imp  LibPolyCall Architecture Definition Document.md
libpolycall-v1/docs/architecture/: FEATURES.md  LibPolyCall Glue Philosophy & Anti-Pattern Prevention Guide.md  LibPolyCall – Semantic Version X FFI Adapter Vision.md  NLM_FRAMEWORK.md  OBINexus User-Defined XSD Polyglot System Specification.md  PLAN.md  PolyCall.md  TRIAL.md  USAGE.md  (+1 more)
libpolycall-v1/phonecall/: client.html  dialer.py  riftcall.html  schema.py  server.ts
libpolycall-v1/v1/: Makefile  README.md  config.Polycallfile
libpolycall-v1/v2/: CMakeLists.txt  CMakeLists.txt.unified  Makefile  Makefile.clean  Makefile.direct  Makefile.final  Makefile.fixed  Makefile.working  README.md
libpolycall-v1/v2/MVP/: Makefile  README.md
libpolycall-v1/v2/MVP/api/: libpolycall-api.js
libpolycall-v1/v2/MVP/src/: polycall_core.c
libpolycall-v1/v2/bindings/python/: pypolycall.py
libpolycall-v1/v2/config/: features.xml  hotwire.yaml  libpolycall.ffi.json.in  libpolycall.xml  libpolycall_schema.xml  module_registry.xml
libpolycall-v1/v2/docs/: ANALYSIS.md  FIX.md  LibPolyCall Architecture Definition Document.md  v2-restructure-plan (1).md
libpolycall-v1/v2/include/: network.h  polycall.h  polycall_dop_adapter.h  polycall_micro.h  polycall_parser.h  polycall_protocol.h  polycall_state_machine.h  polycall_token.h  polycall_tokenizer.h
libpolycall-v1/v2/include/libpolycall/adapter/: adapter_private.h
libpolycall-v1/v2/include/libpolycall/config/: config_reader.h
libpolycall-v1/v2/include/libpolycall/core/: core_private.h  network.h  parser.h  polycall.h  polycall_micro.h  polycall_parser.h  polycall_token.h  token.h  tokenizer.h  types.h
libpolycall-v1/v2/include/libpolycall/hotwire/: hotwire_private.h
libpolycall-v1/v2/include/libpolycall/micro/: micro_private.h  polycall_micro.h  service.h
libpolycall-v1/v2/include/libpolycall/namespace/: module_schema.h  namespace_resolver.h
libpolycall-v1/v2/include/libpolycall/nlm/: nlm_private.h
libpolycall-v1/v2/include/libpolycall/socket/: network.h  protocol.h  socket_private.h
libpolycall-v1/v2/include/libpolycall/stream/: stream_private.h
libpolycall-v1/v2/include/libpolycall/xml/: xml_dom.h  xml_ffi.h  xml_navigator.h  xml_parser.h  xml_token.h
libpolycall-v1/v2/include/libpolycall/zero/: zero_private.h
libpolycall-v1/v2/scripts/: build.sh  direct_build.sh  generate_module.sh
libpolycall-v1/v2/scripts/legacy/: fix_cmake_syntax.sh  fix_headers.sh  v2_build_fix.sh  validate_build.sh
libpolycall-v1/v2/src/adapter/: CMakeLists.txt  Makefile  polycall_dop_adapter.c  polycall_dop_adapter_invoke.c  polycall_dop_adapter_lifecycle.c  polycall_dop_adapter_memory.c  polycall_dop_adapter_security.c  polycall_dop_adapter_utils.c  polycall_dop_bridge_registry.c
libpolycall-v1/v2/src/cli/: CMakeLists.txt  pid_manager.c  polycall_cli.c
libpolycall-v1/v2/src/core/: CMakeLists.txt  Makefile  nlm_atlas_avl_huffman.c  polycall.c  polycall.c.broken_20081015  polycall_protocol.c  state_machine.c  token.c  tokenizer.c
libpolycall-v1/v2/src/hotwire/: CMakeLists.txt  Makefile  hotwire.c  hotwire_router.c
libpolycall-v1/v2/src/micro/: CMakeLists.txt  Makefile  polycall_banking_service.c  polycall_micro.c
libpolycall-v1/v2/src/namespace/: dag_resolver.c  hash_table.c
libpolycall-v1/v2/src/nlm/: CMakeLists.txt  Makefile
libpolycall-v1/v2/src/socket/: CMakeLists.txt  Makefile  network.c  polycall_socket.c  polycall_socket_protocol.c  polycall_socket_security.c  polycall_socket_worker.c
libpolycall-v1/v2/src/stream/: CMakeLists.txt  Makefile
libpolycall-v1/v2/src/xml/: CMakeLists.txt  xml_tokenizer.c
libpolycall-v1/v2/src/zero/: CMakeLists.txt  Makefile
libpolycall-v1/v2/test/: test_namespace.c  test_nlm_atlas.c
nsigii_lte_codec/: README.md
nsigii_lte_codec/1-NSIGII_Codec/: README.md  decode.py  example  example.c  index.html  nsigii.go.backup
nsigii_lte_codec/3-NSIGII_Magnetic_Message/: nsigii_magnetic.c  nsigii_magnetic.h  nsigii_mailer.py
nsigii_lte_codec/4-NSIGII_Eze_RelayServer_in_C/: Makefile  README.md
nsigii_lte_codec/5-NSIGII_Probe_System/: README.md  probe.py  server.py
nsigii_lte_codec/6-NSIGII_Not_A_Toy/: README.md  SECURITY.md  protocol-survival.md
obi_py/: __init__.py  probe.py  query.py  symbols.py  system.py  test_system.py
obiai/: README.md  compile_dat.bat  drift_colors.c  drift_colors.h  drift_core.h  drift_lib.c  drift_pure.py  mmuko_camera.py
obinexus_core/: Cargo.toml
obinexus_core/examples/: ontological_reasoning.rs  self_query.rs
obinexus_core/src/: aegis.rs  coherence.rs  dimensions.rs  execution_state.rs  lib.rs  ontology.rs  polygon.rs  probing.rs  query_engine.rs  symbol_table.rs  temporal.rs
riftplayer/: LICENSE  README.md  server.py  test_engine.py
riftplayer/engine/: symbol_engine.py
riftplayer/templates/: index.html
uche/: Formal Specification - 95.4% Consensus Threshold in OBIAI.md  Ph D Roadmap — Obicall Polyglot System (diram).docx  README.md  SECTION_10.md  obiai_patent_claims.md  obinexus-gating-strategy.md  ph_d_roadmap_obicall_polyglot_system_diram.md
(+134 files in other folders)
