[package]
name = "obinexus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core data structures
indexmap = "2.0"
dashmap = "5.5"  # Concurrent hash map for symbol table

# DAG and graph operations
petgraph = "0.6"

# Serialization for state persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Python bindings
[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[features]
python = ["pyo3"]

[lib]
name = "obinexus"
crate-type = ["rlib", "cdylib"]  # Both library and C-compatible for Python

[[example]]
name = "self_query"
path = "examples/self_query.rs"
